--- a/experiment-2/analysis/stats/dynamics.Rmd
+++ b/experiment-2/analysis/stats/dynamics.Rmd
@@ -152,8 +152,7 @@ ggerrorplot(vel_dyn, x = "Condition", y = "Mean", add = c("mean", "mean_se"), er
 vel_dyn_plot <- data.table(subject = vel_dyn[Condition == "teaching"]$SubNr, teaching = vel_dyn[Condition == "teaching"]$Mean, performing = vel_dyn[Condition == "performing"]$Mean, subcomponent = vel_dyn[Condition == "teaching"]$Subcomponent)
 
 ggpaired(vel_dyn_plot, cond = "performing", cond2 = "teaching", color = "condition", facet.by = "subcomponent", line.size = 0.3, line.color = "gray", palette = "aaas", xlab = "Condition", ylab = "KV (0-127)", title = "KV: Dynamics") +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed", ) +
-  theme(legend.position = "none")
+  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed")
 ```
 
 ### Statistics
@@ -171,8 +170,8 @@ summary(vel_dyn_aov_2)
 
 #### Post-hoc (emmeans)
 ```{r post-hoc-1, echo = FALSE}
-test(pairs(emmeans(vel_dyn_aov,~Condition|Subcomponent)), joint = TRUE)
-pairs(emmeans(vel_dyn_aov,~Condition|Subcomponent), adjust = "tukey")
+vel_dyn_posthoc <- test(pairs(emmeans(vel_dyn_aov,~Condition|Subcomponent), adjust = "tukey"), joint = TRUE)
+vel_dyn_posthoc
 ```
 
 ## 3. Trial by trial - individual{#vel_dyn_ind_trial}
@@ -264,7 +263,7 @@ ggerrorplot(vel_diff_dyn, x = "Condition", y = "Mean", add = c("mean", "mean_se"
 vel_diff_dyn_plot <- data.table(subject = vel_diff_dyn[Condition == "teaching"]$SubNr, teaching = vel_diff_dyn[Condition == "teaching"]$Mean, performing = vel_diff_dyn[Condition == "performing"]$Mean, subcomponent = vel_diff_dyn[Condition == "teaching"]$Subcomponent)
 
 ggpaired(vel_diff_dyn_plot, cond = "performing", cond2 = "teaching", color = "condition", facet.by = "subcomponent", line.size = 0.3, line.color = "gray", palette = "aaas", xlab = "Condition", ylab = "Difference", title = "KV-Diff: Dynamics") +
-  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed", )
+  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed")
 ```
 
 ### Statistics
@@ -282,8 +281,8 @@ summary(vel_diff_dyn_aov_2)
 
 #### Post-hoc (emmeans)
 ```{r post-hoc-2, echo = FALSE}
-test(pairs(emmeans(vel_diff_dyn_aov,~Condition|Subcomponent)), joint = TRUE)
-pairs(emmeans(vel_diff_dyn_aov,~Condition|Subcomponent), adjust = "tukey")
+vel_diff_dyn_posthoc <- test(pairs(emmeans(vel_diff_dyn_aov,~Condition|Subcomponent), adjust = "turkey"), joint = TRUE)
+vel_diff_dyn_posthoc
 ```
 
 ## 3. Trial by trial - individual{#vel_diff_dyn_ind_trial}
@@ -393,8 +392,8 @@ summary(vel_art_aov_2)
 
 #### Post-hoc (emmeans)
 ```{r post-hoc-3, echo = FALSE}
-test(pairs(emmeans(vel_art_aov,~Condition|Subcomponent)), joint = TRUE)
-pairs(emmeans(vel_art_aov,~Condition|Subcomponent), adjust = "tukey")
+vel_art_posthoc <- test(pairs(emmeans(vel_art_aov,~Condition|Subcomponent), adjust = "turkey"), joint = TRUE)
+vel_art_posthoc
 ```
 
 ## 3. Trial by trial - individual{#vel_art_ind_trial}
@@ -504,8 +503,8 @@ summary(vel_diff_art_aov_2)
 
 #### Post-hoc (emmeans)
 ```{r post-hoc-4, echo = FALSE}
-test(pairs(emmeans(vel_diff_art_aov,~Condition|Subcomponent)), joint = TRUE)
-pairs(emmeans(vel_diff_art_aov,~Condition|Subcomponent), adjust = "tukey")
+vel_diff_art_posthoc <- test(pairs(emmeans(vel_diff_art_aov,~Condition|Subcomponent), adjust = "turkey"), joint = TRUE)
+vel_diff_art_posthoc
 ```
 
 ## 3. Trial by trial - individual{#vel_diff_art_ind_trial}
